syntax="proto3";

package chat;

option java_multiple_files = true;
option java_package = "com.example.chat.server.adapter.grpc";

message LoginRequest {
	string username = 1;
}

message LoginResponse {
	string userId = 1;
}

service AuthGateway {
	rpc Login (LoginRequest) returns (LoginResponse) {}
}

message ListRoomRequest {
}

message Room {
	string id = 1;
	int32 userCount = 2;
}

message ListRoomResponse {
	repeated Room rooms = 1;
}

service RoomGateway {
	rpc List (ListRoomRequest) returns (ListRoomResponse) {}
}
